--- a/css/exercise-types/reading-type8.css
+++ b/css/exercise-types/reading-type8.css
@@ -66,3 +66,8 @@
   line-height: 1.5;
   min-width: 200px;
 }
+
+.reading-type8-question .gap-answer {
+  justify-content: center;
+  text-align: center;
+}
